<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@color/background">



    <TextView
        android:id="@+id/products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/products"
        android:textStyle="italic"
        android:textSize="40sp"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="70dp"/>

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textStyle="italic"
        android:textColor="@color/black"

        android:textSize="30sp"


        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/products"
        android:layout_marginTop="60dp"/>

    <androidx.cardview.widget.CardView
        android:layout_margin="40dp"
        android:id="@+id/cardViewPrincipal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        app:cardCornerRadius="20dp"
        android:backgroundTint="@color/blue"
        android:layout_height="40dp">
    
    <Spinner
        android:id="@+id/spinner"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:tooltipText="@string/app_name"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textAllCaps="true"

        />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/next"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAllCaps="true"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@id/cardViewPrincipal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/spinnerColor"
        />




</androidx.constraintlayout.widget.ConstraintLayout>